Fix icon color visibility issue

--- a/style/custom.css
+++ b/style/custom.css
@@ -410,7 +410,7 @@ footer h6 {
 }
 
 .footer-link {
-  color: var(--blue-white);
+  color: var(--blue-white) !important;
 }
 .footer-btn-link,
 .footer-secondary-text {
@@ -418,7 +418,7 @@ footer h6 {
 }
 
 .footer-link:hover {
-  color: var(--blue-400);
+  color: var(--blue-400) !important;
 }
 .footer-btn-link:hover {
   color: var(--blue-400) !important;
